[package]
name = "arms"
version = "0.1.0"
edition = "2021"

# wasm setups
[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.1.1", features = ["alloc"] }
serde = "1.0.136"
serde-transcode = "1.1.1"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
sha2 = "0.10.1"
wasm-bindgen = "0.2.79"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.29"
