[package]
name = "arms"
version = "0.1.0"
edition = "2021"

# wasm setups
[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.1.1", features = ["alloc"] }
base64 = "0.13.0"
hmac = "0.12.0"
html-escape = "0.2.9"
jwt = "0.16.0"
percent-encoding = "2.1.0"
serde = "1.0.136"
serde-transcode = "1.1.1"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
sha2 = "0.10.1"
wasm-bindgen = "0.2.79"
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2", features = ["js"] } # indirect dependency of uuid, needing config for wasm

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
