[package]
name = "dev_arms"
version = "0.1.0"
description = "All in one offline toolbox: swiss army knife-like utils give you extra arms"
authors = [ "Qiushi Pan" ]
license = ""
repository = ""
default-run = "dev_arms"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.2", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
